<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.y_chen.checkoutcounterapp.Fragment_main_features_default">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/fragment_default_button_include_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_default_button_include_products_text"/>
        <Button
            android:id="@+id/fragment_default_button_list_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_default_button_list_products_text"/>
        <Button
            android:id="@+id/fragment_default_button_list_inquiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_default_button_list_inquiry_text"/>
        <Button
            android:id="@+id/fragment_default_button_stock_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_default_button_stock_control_text"/>

    </LinearLayout>

</FrameLayout>
